# IKFoM-Designer

./: .gitignore  README.md  pyproject.toml
src/ikfmd/: __init__.py  base_designer.py  meas_block.py  meas_combo.py  mx_math.py  mx_util.py  sys_dynamics.py  util.py
tests/: imu_filter_designer.py  meas_combo_demo.py
